--- a/todo.txt
+++ b/todo.txt
@@ -1,23 +1,35 @@
-version - 0.01.6
+version - 0.02.0
 
 	-to-do-
 
 # fix blue/green leds remaining after button push, if possible
-# set up plugins to work with knobs
-# shortcut to increase knobs cc's for greater access 
+# shortcut to increase knobs cc's for increased access 
 # repeat note events
 # led to follow active step
 # led when paramter at zero or c5 note
-# setup keyboard mode
-# setup scales mode
+# setup scales mode for continuous
 # add new pattern(?)
 # fix up/down bug
 # increase channel knob access and or
 # change volume on selected channel
 # tap tempo
-
+# lighting issues swtiching between modes
+# set leds so they refelct active mode
+# blue lights remain on steps in parameter mode 
+# in continuous mode, alter color of black keys
+# some buttons play notes when they shouldn't
 
 	-done-
+
+# fixed bug where entering step mode wasn't permitted in certain circumstances 0.02.1
+# added ability to control multiple plugin parameters with touchpad 0.02.0
+# fixed some lighting issues 0.01.9
+# 'B' button goes through octaves when keyboard is active 0.01.8
+# 'B' button now toggles through sub-sub modes  0.01.8
+# open channel now controlled by 'C' button rather than 'B' 0.01.8
+# set up plugins to work with knobs 0.01.7
+# keyboard notes now play correctly 0.01.7
+# continuous keys and keyboard have switched spots / keyboard now loads first 0.01.7
 # fixed mute button conflict with knobs 0.01.6
 # fixed bug where pad per channel mode wouldn't play if plugin focused 0.01.6
 # changed pad per channel lights to purple just because 0.01.5
@@ -26,8 +38,8 @@ version - 0.01.6
 # fix long notes bug 0.01.5
 # add broswer scroll/select functionality 0.01.5
 # add random trigs
-# pattern selector/32 step mode
-# step parameter
+# added pattern selector/32 step mode
+# added step parameter mode
 # FPC/SliceX mode
 # light keyboard keys
 # add scales/random notes
