--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,8 @@
-version - 0.03.0
+version - 0.2.1
 
 	-to-do-
 
 # fix blue/green leds remaining after button push, if possible
-# shortcut to increase knobs cc's for increased access 
 # repeat note events
 # led to follow active step
 # led when paramter at zero or c5 note
@@ -14,11 +13,18 @@ version - 0.03.0
 # set leds so they refelct active mode
 # blue lights remain on steps in parameter mode 
 # in continuous mode, alter color of black keys
-# if an effect plugin is focused, knobs will change the params on a synth plugin if selected in channels
-
+# add note offset when scales are used to reduce their list size
 
 	-done-
 
+# fixed led issues when pattern selector and accumulator were selected 0.2.1
+# fixed various accumulator bugs 0.2.0
+# step leds turn yellow when in accumulator mode 0.1.3
+# fixed knob 7 bug with Fruity DX10 in accumulator mode 0.1.2 
+# added chromatic scale 0.1.1
+# in parameter edit mode, active note shown when turning knob for pitch instead of cc number 0.1.1
+# new mode added: accumulator mode (only for 16 step patterns)0.1.0
+# sub modes snd sub_sub modes reinitialize when modes and sub modes change respectively 0.03.1
 # step leds now turn white when in parameter edit mode 0.03.0
 # during step parameter changes, readout now reflects CC value as well as active parameter 0.02.9
 # during knob turns under random mode, readout now reflects CC value of lower and upper note limits 0.02.9
